# RedactAI

./: .flake8  .gitignore  1-UAT.md  AGENTS.md  README.md  pyproject.toml
.github/: CODEOWNERS
.github/workflows/: release.yml  test.yml
assets/corpus/: sample_pii.txt
assets/models/: .gitkeep
src/: main.py
src/ai/: __init__.py  detector.py  object_detector.py  ocr.py  types.py
src/businessLogic/: __init__.py  export_orchestrator.py  pipeline_controller.py  pipeline_types.py
src/persistance/: __init__.py  analytics.py  analytics_config.py  config_manager.py  image_reader.py  image_writer.py  resource_loader.py  test_config_manager.py
src/redactEngine/: __init__.py  redactor.py
src/ui/: __init__.py  main_window.py
src/ui/dialogs/: __init__.py  alert_dialog.py
src/ui/styles/: __init__.py  theme.qss
src/ui/views/: __init__.py  detection_progress.py  drop_target_widget.py  export_page.py  homepage.py  placeholder.py
src/ui/views/review/: image_canvas.py  review_page.py  types.py
tests/: test_main.py
tests/ai/: conftest.py  test_detector.py  test_nlp_detector.py  test_object_detector.py  test_ocr.py
tests/assets/corpus/: validation_corpus.jsonl
tests/businessLogic/: __init__.py  test_export_orchestrator.py  test_pipeline_controller.py
tests/persistance/: test_analytics.py  test_config_manager.py  test_image_reader.py  test_image_writer.py
tests/redactEngine/: test_redactor.py
tests/ui/views/: test_export_page.py
tests/ui/views/review/: test_assemble_output.py  test_types.py
