[project]
name = "redactai"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "pyqt6>=6.11.0",
    "pytest>=9.0.3",
]

[project.scripts]
app = "main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.package-dir]
"" = "src"
