[project]
name = "redactai"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "black>=26.3.1",
    "flake8>=7.3.0",
    "isort>=5.13.0",
    "pyqt6>=6.11.0",
    "pytest>=9.0.3",
    "pytest-cov>=4.1.0",

]

[project.scripts]
app = "src.main:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["src"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 120
target-version = ['py314']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 120
skip_glob = [".venv", "venv"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --strict-markers"
markers = [
    "slow: marks tests as slow",
    "integration: marks tests as integration tests",
]

[tool.coverage.run]
source = ["src"]
omit = ["*/tests/*", "*/venv/*"]
branch = true

[tool.flake8]
max-line-length = 120
exclude = [".venv", "venv", ".git", "__pycache__", "dist", "build", "tests"]
extend-ignore = ["E203", "W503"]